tests/src/frontend/syntax/invalid/lvalue_in_call_array_argument.sk
fun main(): String {
  a[a.!x]
}
